--- a/templates/graphics/speaker_info.html
+++ b/templates/graphics/speaker_info.html
@@ -1,26 +1,26 @@
 <div id="speaker_info_object1">
     <div id="speaker_infoRedBar">
-        <div id="speaker_infoName">
+        <div id="speaker_infoName1">
             <h1>Chloe</h1>
             <h2>Silva</h2>
         </div>
     </div>
 
     <div id="speaker_infoContent">
-        <p id="speaker_infoTitle">Speaker</p>
+        <p id="speaker_infoTitle1">Speaker</p>
     </div>
 </div>
 
 <div id="speaker_info_object2">
     <div id="speaker_infoRedBar">
-        <div id="speaker_infoName">
+        <div id="speaker_infoName2">
             <h1>Chloe</h1>
             <h2>Silva</h2>
         </div>
     </div>
 
     <div id="speaker_infoContent">
-        <p id="speaker_infoTitle">Speaker</p>
+        <p id="speaker_infoTitle2">Speaker</p>
     </div>
 </div>
 
