--- a/templates/graphics/best_time.html
+++ b/templates/graphics/best_time.html
@@ -14,7 +14,7 @@
 
 <br><br><br><br>
 
-<div id="best_time_object_cv" style="display: none;">
+<div id="best_time_object_cv">
     <div id="best_time_university_cv" class="best_time_university">
         Università degli Studi di Parma
     </div>
