--- a/templates/endurance.html
+++ b/templates/endurance.html
@@ -12,7 +12,7 @@
 
 <body>
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; width: 246px">
-        <img src="static/icons/endurance.png" id="endurance_icon" style="width: 246px; height: 79px;">
+        <img src="static/icons/{{ race }}.png" id="endurance_icon" style="width: 246px; height: 79px;">
         <div style="width: 246px; height: 816px; margin-top: 10px; background: linear-gradient(to right, #232323c5, transparent, transparent); overflow: hidden; transition: all 1.5s;"
             id="endurance_list">
             {% for team in teams %}
